# andreas-schaler

./: .gitignore  404.html  CNAME  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yaml
bio-portfolio/: index.md
search/: search_index.json
views/: index.html
