[project]
name = "andreas-schaler"
description = "Andreas Schaler's personal biography and portfolio site"
version = "0.1.0"
requires-python = ">=3.13"
readme = "README.md"
contributing = "CONTRIBUTING.md"
dependencies = []

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.18",
]
